--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <a href="Portada.html" class="enlace">
-            <img src="Imagenes/logo.png" alt="Logo de la NBA" class="logo">
+            <img src="imagenes/logo.png" alt="Logo de la NBA" class="logo">
         </a>
         <input type="checkbox" id="check">
         <label for="check" class="mostrar-menu">
