--- a/jugadores.html
+++ b/jugadores.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/estilosPagina1.css">
-    <link rel="stylesheet" href="CSS/font.css"> 
+    <link rel="stylesheet" href="css/estilosPagina1.css">
+    <link rel="stylesheet" href="css/font.css"> 
 
     <title>NBA</title>
 
@@ -16,7 +16,7 @@
 <body>
     <header>
         <a href="Portada.html" class="enlace">
-            <img src="Imagenes/logo.png" alt="Logo de la NBA" class="logo">
+            <img src="imagenes/logo.png" alt="Logo de la NBA" class="logo">
         </a>
         <input type="checkbox" id="check">
         <label for="check" class="mostrar-menu">
