cambio de CSS a css

--- a/portada.html
+++ b/portada.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/estilosPortada.css">
-    <link rel="stylesheet" href="CSS/font.css">
+    <link rel="stylesheet" href="css/estilosPortada.css">
+    <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     <title>NBA</title>
@@ -19,7 +19,7 @@
     <!-- En la header tenemos el logo de nuestra pagina junto con el menu -->
     <header>
         <a href="Portada.html" class="enlace">
-            <img src="Imagenes/logo.png" alt="Logo de la NBA" class="logo">
+            <img src="imagenes/logo.png" alt="Logo de la NBA" class="logo">
         </a>
         <input type="checkbox" id="check">
         <label for="check" class="mostrar-menu">
